<resources>
    <string name="app_name">SessionM Example</string>
    <string name="receipts">Receipts</string>
    <string name="offers">Offers</string>
    <string name="test_app_key">62fb1400638ab32d0050b0d9ae894fe61740c4f5</string>
    <string name="gcm_sender_id">311179646130</string>
    <string name="learn_more">Learn More</string>
    <string name="redeem">Redeem</string>
    <string name="logged_in">Logged In</string>
    <string name="log_in">Log in</string>
    <string name="log_out">Log out</string>
    <string name="logged_out">Logged out</string>
    <string name="submitted">Submitted</string>
    <string name="log_in_or_sign_up">Log in / Sign up</string>
    <string name="zip_code">Zipcode</string>
    <string name="gender">Gender</string>
    <string name="yob">Year Of Birth</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="achievement_unlocked">ACHIEVEMENT UNLOCKED</string>
    <string name="close_button_desc">Close Button</string>
    <string name="portal_button_desc">Portal Button</string>
    <string name="action_button_text">Log Action</string>
    <string name="custom_action_text">Custom Achievement</string>
    <string name="settings">Settings</string>
    <string name="activity_feed">Activity Feed</string>
    <string name="portal">Portal</string>
    <string name="auth_login">Auth Log In</string>

    <!-- Settings -->
    <array name="settings_array">
        <item>Geofence</item>
        <item>Push Notification</item>
        <item>Custom Loader</item>
        <item>User Opted Out</item>
        <item>SDK Version: </item>
        <item>App Version: </item>
        <item>Exit SessionM Example App</item>
    </array>
    <string name="title_activity_offer_detail">OfferDetailActivity</string>
    <string name="title_activity_promotion_details">PromotionDetails</string>
    <string name="launch_promotion">Launch Promotion</string>
    <string name="terms_and_conditions">Terms and Conditions:</string>

</resources>
