<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/card_view_margin"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:cardCornerRadius="8dp">

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/portal_button_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#fff"
                android:orientation="horizontal">

                <!-- this is a custom button -->

                <ImageButton
                    android:id="@+id/rewards_btn"
                    android:layout_width="@dimen/portal_button_width"
                    android:layout_height="@dimen/portal_button_width"
                    android:layout_alignParentLeft="true"
                    android:layout_margin="10dp"
                    android:background="@color/colorPrimary"
                    android:contentDescription="@string/portal_button_desc"
                    android:src="@drawable/icn_mportal_off"/>

                <com.sessionm.api.PortalButton
                    android:id="@+id/portalButton"
                    android:layout_width="@dimen/portal_button_width"
                    android:layout_height="@dimen/portal_button_width"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_margin="10dp"
                    android:scaleType="fitStart">

                </com.sessionm.api.PortalButton>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/portal_button_layout">

                <Button
                    android:id="@+id/custom_action_btn"
                    android:layout_width="@dimen/achievement_button_width"
                    android:layout_height="@dimen/achievement_button_height"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="10dp"
                    android:background="@drawable/button_bg"
                    android:text="@string/custom_action_text"
                    android:textColor="@color/white"/>

                <Button
                    android:id="@+id/action_btn"
                    android:layout_width="@dimen/achievement_button_width"
                    android:layout_height="@dimen/achievement_button_height"
                    android:layout_below="@+id/custom_action_btn"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="10dp"
                    android:background="@drawable/button_bg"
                    android:text="@string/action_button_text"
                    android:textColor="@color/white"/>
            </RelativeLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>
